# robot_agent

./: .env  .gitignore  PROJECT_SUMMARY.md  README.md  TESTING_PROGRESS.md  main.py  pyproject.toml  requirements.txt  run.py
.deepseek/: instructions.md
configs/: unified.example.json
reference/robot_lab/assets/: unitree.py
reference/robot_lab/tasks/manager_based/locomotion/velocity/config/quadruped/unitree_b2/agents/: rsl_rl_ppo_cfg.py
src/robot_agent/: __init__.py
src/robot_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/robot_agent/agents/: __init__.py  orchestrator.py  phase1_orchestrator.py  phase1_steps.py  taili_orchestrator.py  taili_steps.py
src/robot_agent/schemas/: __init__.py  config.py  state.py
src/robot_agent/tools/: __init__.py  autodl_api.py  llm_client.py  ssh_client.py  taili_cloud.py
