[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-agent"
version = "0.2.0"
description = "Multi-agent robotics automation with Google ADK"
requires-python = ">=3.10"
dependencies = [
  "google-adk>=1.9.0",
  "httpx>=0.27.0",
  "openai>=1.61.0",
  "pydantic>=2.8.2",
  "paramiko>=3.4.0",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
